assets/styles/default.scss
/* ... */
.navbar .nav.navbar-right > li > a.small-width {
	min-width: 50px;
	box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
}

.navbar .navbar-nav li {

	.badge {
		position: absolute;
		top: 1px;
		right: -3px;
		z-index: 1;
		padding: 4px 8px;
		background-color: $successColor;
		color: white;
	}

	.badge.badge-mention {
		background-color: $navbarMentionColor;
		color: #000;
		-webkit-animation: pulse 0.6s infinite;
		animation: bounce 0.6s infinite;
	}
}

// debrowning things

.table > thead > tr > th {
	border-bottom: 2px solid #ccc;
}

.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
	border-top: 1px solid #ccc;
}

.form-control,
input:focus, .form-control:focus {
	border: solid #ccc 1px;
}

.list-group-item {
	border-color: #ccc;
}

/* augments */

.no-gutter {
	padding-left: 0;
	padding-right: 0;
}

.col-center {
	float: none;
	margin: 0 auto;
}

.input-inline {
	display: inline-block;
	width: auto;
	padding-top: 2px;
}

.float {
	position: absolute;
}

.inline {
	display: inline-block;
	width: auto;
}

.input-group-btn button {
	padding: 6.5px 15px;
}

section {
	margin: 20px 0;
}

mark {
	display: inline-block;
	color: black;
	background-color: black;
}

mark:hover {
	color: white;
}

// splash screen

[splash] {
	position: fixed;
	top: 0;
	width: 100%;
	height: 100%;
	background-color: $darkBackgroundColor;
	z-index: 9001;
	padding-top: 90px;
	text-align: center;
	font-family: "Cabin", Arial, sans-serif;
	font-size: 36px;
	font-weight: bolder;
	color: #fff;

	img {
		width: 150px;
	}
}

.splash-brand {
	font-size: 150px;
	text-shadow: 12px 12px 3px $successColor, 24px 24px 6px #000;
	text-transform: uppercase;
	text-align: center;
}

// header dropdowns

.header-dropdown {
	position: fixed;
	top: 40px;
	right: 0;
	width: 460px;
	height: 500px;
	margin-left: -300px;
	border: solid #ddd;
	border-width: 0 0 3px 3px;
	border-bottom-left-radius: 4px;
	background: $lightBackgroundColor;
	overflow-x: hidden;
	font-size: 13px;
}

.warning {
	color: $navbarMentionColor
}

// inbox

[inbox] {

	header {
		text-align: center;
		padding: 10px;
		font-size: 16px;
		background-color: #616469;
	}

	ol {
		margin: 0;
	}

	li {
		overflow: hidden;
		background-color: #414B57;
		border-bottom: solid 1px #aaa;
		line-height: 30px;

		.inbox-author {
			float: left;
			width: 100px;
			height: 30px;
			color: white;
			overflow: hidden;
		}
		.inbox-message-content {
			float: left;
			width: calc(100% - 100px);
			padding: 0 7px;
			background-color: white;

			.timestamp {
				float: right;
			}

			&.read {
				background-color: #F5F5F5;
			}
		}
	}
}

/* pin board */
.pin-board {
	position: fixed;
	display: none;
	overflow-y: scroll;
	overflow-x: hidden;
	bottom: 34px;
	background: white;
	top: 48px;
	right: 10%;
	left: 80px;
	border: 1px solid #DFD7CA;
	box-shadow: 0 6px 12px rgba(0, 0, 0, .5);
	padding: 8px;
	border-radius: 4px;
	z-index: 1040;
}

.pin-board-active {
	display: block;
}

.pin-board-message {
	float: left;
	padding: 12px;
	max-width: 100%;
}

.pin-board-message > div {
	padding: 16px 16px 14px 14px;
	border: 1px solid #ddd;
	box-shadow: 0 2px 3px 0 #aaa;
	position: relative;
}

.pin-board-message .pin-message-author {
	margin-right: 8px;
	display: inline-block;
}

.pin-board-message:hover .pin-board-unpin {
	display: block;
}

.pin-board-unpin {
	display: none;
	color: #888;
	cursor: pointer;
	position: absolute;
	top: 4px;
	right: 4px;
}

.pin-board-unpin:hover {
	color: #000;
}

.message-pin-icon {
	cursor: pointer;
	display: none;

	&.fa-bookmark {
		display: inline;

		&.disabled {
			cursor: default;
		}
	}
}

.message:hover .fa-bookmark-o:not(.disabled) {
	display: inline;
}

.message-info > .text-muted {
	margin-left: 5px;
}

/* emoticon */

[emoticon-menu] .row {
	border-bottom: solid #ddd 1px;
	padding: 0 15px;
	overflow: hidden;
}

[emoticon-menu] .row:last-of-type {
	border-bottom: none;
}

[emoticon-menu] .col-xs-3 {
	overflow: hidden;
	text-align: center;
}

[emoticon-menu] .emoticon-container {
	height: 23px;
}

[emoticon-menu] .emoticon {
	max-height: 23px;
}

[emoticon-menu] a {
	color: #333;
}

[emoticon-menu] a:hover {
	text-decoration: none;
}

[emoticon-menu] hr {
	margin: 4px 0 4px 0;
}

.emoticonListItem {
	margin-bottom: 4px;
}

.sortEmoticons a {
	margin: 17px;
}

.sortEmoticons input {
	margin: 9px 2px 4px 12px;
}

// bunker stuff

.topic {
	padding: 5px 10px;
	border-bottom: solid #eee 1px;
	border-right: solid 1px #eee;
	line-height: 30px;
	background-color: $lightBackgroundColor;
}

[fill], .fill {
	overflow: hidden;
}

.message-list {
	height: calc(100vh - 87px);
	overflow-y: auto;
	border-right: solid 1px #eee;
	margin: 0;
}

.message-list.has-topic {
	height: calc(100vh - 128px);
}

.message-container {
	position: relative;
}

.message {
	line-height: 30px;
	background-color: #414B57;

	&.local {
		background-color: #596470;
	}
}

li:not(:last-child) .message.last-read:after {
	content: ' ';
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 2px;
	z-index: 1000;
	background-color: $successColor;
}

// message type specific styles

.message.message-type-8ball [bunker-message] {
	-webkit-animation: fadein 2.5s; /* Safari, Chrome and Opera > 12.1 */
	-moz-animation: fadein 2.5s; /* Firefox < 16 */
	-o-animation: fadein 2.5s; /* Opera < 12.1 */
	animation: fadein 2.5s;
}

.message.message-type-hangman [bunker-message] {
	font-family: monospace;
}

.message-author {
	float: left;
	width: 180px;
	color: white;
	padding-left: 4px;
	height: 30px;
	line-height: 30px;

	* {
		vertical-align: middle;
	}

	img {
		height: 20px;
		margin-left: 5px;
	}

	.name {
		text-overflow: ellipsis;
		width: 108px;
		min-width: 108px;
		overflow: hidden;
		display: inline-block;
		padding-left: 4px;
		height: 30px;
		white-space: nowrap;
	}
}
/* ... */

